--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 body, html, #root, .App {
   margin: 0;
   padding: 0;
@@ -34,6 +36,32 @@ body, html, #root, .App {
 }
 
 label {
+  font-family: 'Roboto', sans-serif;
   font-weight: bold;
   margin-bottom: 8px;
+}
+
+select {
+  font-family: 'Roboto', sans-serif;
+  padding: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.download-button {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  margin-top: auto;
+  padding: 10px 20px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+
+.download-button:hover {
+  background-color: #45a049;
 }
