--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ select {
   border-radius: 5px;
 }
 
-.download-button {
+button {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   margin-top: auto;
